--- a/Vizov/Base.lproj/Main.storyboard
+++ b/Vizov/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <viewControllerLayoutGuide type="bottom" id="z03-hH-s0G"/>
                     </layoutGuides>
                     <scrollView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Dg9-jT-FaN">
-                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" borderStyle="line" placeholder="memo" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eNp-z1-3iA">
@@ -34,8 +34,7 @@
                                         <exclude reference="zij-4n-Xoe"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="28" y="330" width="345" height="119"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <exclude reference="YuF-yE-IMX"/>
                                         <exclude reference="zij-4n-Xoe"/>
@@ -91,10 +90,10 @@
                                 <exclude reference="Zs1-8a-xuI"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="Pdr-o1-Qnm"/>
-                                <exclude reference="aIx-jr-adB"/>
                                 <exclude reference="fOR-f1-ao1"/>
                                 <exclude reference="wRf-hs-G7y"/>
+                                <exclude reference="Pdr-o1-Qnm"/>
+                                <exclude reference="aIx-jr-adB"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact" ambiguous="YES">
@@ -105,10 +104,10 @@
                                 <include reference="Zs1-8a-xuI"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="Pdr-o1-Qnm"/>
-                                <include reference="aIx-jr-adB"/>
                                 <include reference="fOR-f1-ao1"/>
                                 <include reference="wRf-hs-G7y"/>
+                                <include reference="Pdr-o1-Qnm"/>
+                                <include reference="aIx-jr-adB"/>
                             </mask>
                         </variation>
                     </scrollView>
@@ -139,7 +138,6 @@
         <!--My Events Table View Controller-->
         <scene sceneID="WFT-fD-gAw">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1Qj-KM-AAS" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController storyboardIdentifier="MyEventsTableViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="f3U-qQ-I2x" customClass="MyEventsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="87" sectionHeaderHeight="22" sectionFooterHeight="22" id="IH7-GV-tnj">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -199,6 +197,7 @@
                         </connections>
                     </tableView>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Qj-KM-AAS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2523" y="-616"/>
         </scene>
@@ -422,6 +421,7 @@
                         <viewControllerLayoutGuide type="bottom" id="dX4-pe-VWY"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="7qY-gB-Un7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sda-Qr-UAo">
@@ -463,7 +463,6 @@
         <!--Camera-->
         <scene sceneID="u3d-Hc-1Yu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hsb-UG-nZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="890-zo-S9r" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Camera" id="5my-Es-ZOJ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="JiF-4j-aPf">
@@ -474,6 +473,7 @@
                         <segue destination="hx0-9w-zYR" kind="relationship" relationship="rootViewController" id="epR-mk-7To"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hsb-UG-nZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="742.5" y="1044"/>
         </scene>
@@ -700,7 +700,7 @@
                                     <constraint firstAttribute="height" constant="169" id="dL4-qs-5Xe"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellFirst" editingAccessoryType="checkmark" id="Xhk-9R-9rN" customClass="NewPageTableViewCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellFirst" editingAccessoryType="checkmark" id="Xhk-9R-9rN">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Xhk-9R-9rN" id="VHW-Lu-cEe">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -723,15 +723,6 @@
                                                         <rect key="frame" x="21" y="8" width="0.0" height="0.0"/>
                                                     </variation>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カウントダウン（日数）" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7KB-me-m15">
-                                                    <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                    <variation key="widthClass=compact" fixedFrame="YES">
-                                                        <rect key="frame" x="21" y="11" width="190" height="21"/>
-                                                    </variation>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" あと何日？" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQD-V9-2qy">
                                                     <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -741,21 +732,30 @@
                                                         <rect key="frame" x="219" y="10" width="90" height="21"/>
                                                     </variation>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カウントダウン（日数）" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7KB-me-m15">
+                                                    <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="widthClass=compact" fixedFrame="YES">
+                                                        <rect key="frame" x="21" y="11" width="190" height="21"/>
+                                                    </variation>
+                                                </label>
                                             </subviews>
                                             <variation key="default">
                                                 <mask key="subviews">
                                                     <exclude reference="O4S-lX-U0i"/>
                                                     <exclude reference="Dja-l5-5wu"/>
-                                                    <exclude reference="7KB-me-m15"/>
                                                     <exclude reference="pQD-V9-2qy"/>
+                                                    <exclude reference="7KB-me-m15"/>
                                                 </mask>
                                             </variation>
                                             <variation key="widthClass=compact">
                                                 <mask key="subviews">
                                                     <include reference="O4S-lX-U0i"/>
                                                     <include reference="Dja-l5-5wu"/>
-                                                    <include reference="7KB-me-m15"/>
                                                     <include reference="pQD-V9-2qy"/>
+                                                    <include reference="7KB-me-m15"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -894,17 +894,17 @@
                                 <exclude reference="J0P-fx-efC"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="6tG-hr-Xus"/>
-                                <exclude reference="8yf-cm-1M9"/>
-                                <exclude reference="4Y4-OO-ioB"/>
-                                <exclude reference="7QA-2x-kds"/>
-                                <exclude reference="Jxn-FI-Nc9"/>
+                                <exclude reference="2xR-ke-0mc"/>
+                                <exclude reference="ppv-cg-1wl"/>
                                 <exclude reference="49N-jm-QtY"/>
                                 <exclude reference="YHg-aO-4c4"/>
                                 <exclude reference="lot-QM-hUW"/>
                                 <exclude reference="z1c-CR-vwY"/>
-                                <exclude reference="2xR-ke-0mc"/>
-                                <exclude reference="ppv-cg-1wl"/>
+                                <exclude reference="4Y4-OO-ioB"/>
+                                <exclude reference="7QA-2x-kds"/>
+                                <exclude reference="Jxn-FI-Nc9"/>
+                                <exclude reference="6tG-hr-Xus"/>
+                                <exclude reference="8yf-cm-1M9"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -919,17 +919,17 @@
                                 <include reference="J0P-fx-efC"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="6tG-hr-Xus"/>
-                                <include reference="8yf-cm-1M9"/>
-                                <include reference="4Y4-OO-ioB"/>
-                                <include reference="7QA-2x-kds"/>
-                                <include reference="Jxn-FI-Nc9"/>
+                                <include reference="2xR-ke-0mc"/>
+                                <include reference="ppv-cg-1wl"/>
                                 <include reference="49N-jm-QtY"/>
                                 <include reference="YHg-aO-4c4"/>
                                 <include reference="lot-QM-hUW"/>
                                 <include reference="z1c-CR-vwY"/>
-                                <include reference="2xR-ke-0mc"/>
-                                <include reference="ppv-cg-1wl"/>
+                                <include reference="4Y4-OO-ioB"/>
+                                <include reference="7QA-2x-kds"/>
+                                <include reference="Jxn-FI-Nc9"/>
+                                <include reference="6tG-hr-Xus"/>
+                                <include reference="8yf-cm-1M9"/>
                             </mask>
                         </variation>
                     </view>
@@ -1244,6 +1244,7 @@
                         <viewControllerLayoutGuide type="bottom" id="ijN-UH-cMx"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="zp5-Xk-KWx">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
